syntax = "proto3";

import "spiderrock_common.proto";


package spiderrock.protobuf;

import "google/protobuf/timestamp.proto";

    
message SyntheticExpiryCloseMark {
    message PKey {
        
        ExpiryKey ekey = 10;
    }


    MessageMetadata _meta = 1;
    
    PKey pkey = 2;
    DateKey trade_date = 100;
    ClsMarkState cls_mark_state = 103; // Close mark state: None; LastPrt; SRClose; ExchClose; Final
    double opn_prc = 106; // Opening price
    double bid_prc = 109; // bid price (close - 1min)
    double ask_prc = 112; // ask price (close - 1min)
    double sr_cls_prc = 115; // sr close mark (close - 1min)
    double close_prc = 118; // official exchange closing mark
    YesNo has_sRCls_prc = 121;
    YesNo has_close_prc = 124;
    google.protobuf.Timestamp sr_close_mark_dttm = 127; // from MarketCloseQuote.srCloseMarkDttm
    google.protobuf.Timestamp timestamp = 130;
}


